# khiron_python_library

./: README.md  cookiecutter.json
.devcontainer/: DockerFile  README.md  devcontainer.json
{{cookiecutter.library_name}}/: pyproject.toml  requirements.txt
{{cookiecutter.library_name}}/tests/: test_{{cookiecutter.function_name}}.py  test_{{cookiecutter.library_name}}.py  test_{{function_name}}.py
{{cookiecutter.library_name}}/{{cookiecutter.library_name}}/: __init__.py  {{cookiecutter.function_name}}.py  {{function_name}}.py
