[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "{{ cookiecutter.library_name }}"
author = "{{ cookiecutter.author_name }}"
author-email = "{{ cookiecutter.email }}"
home-page = "{{ cookiecutter.url }}"
requires-python = ">=3.6"

[tool.flit.scripts]
# Define your scripts here

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "black"

